<resources>
    <string name="app_name">Exercise1</string>
    <string name="text1">text1</string>
    <string name="button1">send</string>
    <string name="textview1">Switch1 Unchecked</string>
    <string name="switch1">switch1</string>
    <string name="checkBox1">checkBox1</string>
    <string name="textview2">CheckBox1 Unchecked</string>
    <string name="radioButton1">A</string>
    <string name="radioButton2">B</string>
    <string name="radioButton3">C</string>
    <string name="radioResult"></string>
    <string name="spinnerText"></string>
    <string name="takePhoto">拍照</string>
    <string name="resetProgressBar">再看一遍</string>
    <string name="seekBarValue">0</string>
</resources>